--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -120,7 +120,7 @@
         </a> -->
         <a
           *ngIf="
-            element.estadoInformeCod === '3' || element.estadoInformeCod === '7'
+            element.estadoInformeCod === '3' || element.estadoInformeCod === '7' ||  element.estadoInformeCod === '5' ||  element.estadoInformeCod === '6'
           "
           mat-button
           mat-raised-button
