--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -9,7 +9,7 @@
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title 
-        {{estadoAprobacion === '0' || estadoAprobacion == null || semaforo ? 
+        {{estadoAprobacion === '0' || estadoAprobacion == null || estadoAprobacion === '7' || estadoAprobacion === '1' || semaforo ? 
           'sin-diligenciar' : 'completo' }}">
                 Informe final y anexos
         </mat-panel-title>
