--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/revisar-informe/revisar-informe.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/revisar-informe/revisar-informe.component.html
@@ -28,5 +28,5 @@
   <app-datos-del-proyecto *ngIf="report" [report]="report"></app-datos-del-proyecto>
   <app-recibo-satisfaccion *ngIf="report" [report]="report"></app-recibo-satisfaccion>
   <app-form-observaciones-recibo-satisfaccion *ngIf="report" [report]="report"></app-form-observaciones-recibo-satisfaccion>
-  <app-tabla-informe-final-anexos *ngIf="report" [report]="report"></app-tabla-informe-final-anexos>
+  <app-tabla-informe-final-anexos *ngIf="report" [id]="report.proyecto.informeFinal[0].informeFinalId" [llaveMen]="report.proyecto.llaveMen"></app-tabla-informe-final-anexos>
 </section>
