--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -75,7 +75,7 @@
     </ng-container>
 
     <!-- id Column -->
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="proyectoId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
@@ -107,7 +107,7 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          [routerLink]="['revisarInforme', element.id]"
+          [routerLink]="['revisarInforme', element.proyectoId]"
         >
           <span *ngIf="element.estadoCumplimiento == null || element.estadoCumplimiento === '0'">Revisar informe</span> <!--Null o 0-->
           <span *ngIf="element.estadoCumplimiento != null && element.estadoCumplimiento !== '0' && element.estadoCumplimiento === '1'">ver Detalle/Editar</span><!--En proceso de validación de cumplimiento-->
