--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
@@ -221,6 +221,7 @@
                       (keypress)="number($event)"
                       (ngModelChange)="getValueMeses( $event )"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
                       formControlName="mesPlazoEjFase1"
                     />
@@ -270,6 +271,7 @@
                       (keypress)="number($event)"
                       (ngModelChange)="getValueDias( $event )"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;if(this.value>=this.max) return false;"
+                      oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
                       formControlName="diasPlazoEjFase1"
                     />
@@ -333,6 +335,7 @@
                       required
                       (keypress)="number($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                      oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
                       formControlName="mesPlazoEjFase2"
                     />
@@ -381,6 +384,7 @@
                       required
                       (keypress)="number($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;if(this.value>=this.max) return false;"
+                      oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
                       formControlName="diasPlazoEjFase2"
                     />
