--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
@@ -82,6 +82,7 @@
                   (keypress)="number($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
                   type="number"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                 />
               </mat-form-field>
               <span
@@ -345,6 +346,7 @@
                   readonly
                   (keypress)="number($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   [matTooltipPosition]="'above'"
                   matTooltip="Espacio diligenciado por el sistema"
                   matTooltipClass="info-tooltip"
@@ -400,6 +402,7 @@
                   readonly
                   (keypress)="number($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   [matTooltipPosition]="'above'"
                   matTooltip="Espacio diligenciado por el sistema"
                   matTooltipClass="info-tooltip"
@@ -526,6 +529,7 @@
                   maxlength="3"
                   (keypress)="number($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   min="1"
                   max="99"
                   required
@@ -1036,6 +1040,7 @@
                   maxlength="2"
                   (keypress)="number($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   min="1"
                   max="99"
                   required
@@ -1431,6 +1436,7 @@
                   required
                   (keypress)="number($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   type="number"
                   [matTooltipPosition]="'above'"
                   matTooltip="Campo numérico"
@@ -1466,6 +1472,7 @@
                   (keypress)="number($event)"
                   onkeyup="if(this.value>31) this.value = 31;"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   [matTooltipPosition]="'above'"
                   matTooltip="Campo numérico igual o menor a 31 días"
                   matTooltipClass="info-tooltip"
@@ -1508,6 +1515,7 @@
                   max="99"
                   (keypress)="number($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   required
                   type="number"
                   [matTooltipPosition]="'above'"
@@ -1544,6 +1552,7 @@
                   (keypress)="number($event)"
                   onkeyup="if(this.value>31) this.value = 31;"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   [matTooltipPosition]="'above'"
                   matTooltip="Campo numérico igual o menor a 31 días"
                   matTooltipClass="info-tooltip"
@@ -1619,6 +1628,7 @@
                     required
                     (keypress)="number($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                    oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     type="number"
                   />
                 </mat-form-field>
