--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-seleccion-proponente-a-invitar/form-seleccion-proponente-a-invitar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-seleccion-proponente-a-invitar/form-seleccion-proponente-a-invitar.component.html
@@ -31,6 +31,7 @@
                   maxlength="2"
                   (keypress)="validateNumberKeypress($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   formControlName="cuantosProponentes"
                   required
                 />
