--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-financiero/avance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-financiero/avance-financiero.component.html
@@ -35,7 +35,7 @@
                               <label class="label-left">Observaciones</label>
                             </div>
                             <div class="col d-flex">
-                                <quill-editor   class="quill-editor-style card-80em position-relative"
+                                <quill-editor   class="quill-editor-style card position-relative"
                                                 [styles]="editorStyle"
                                                 [modules]="config"
                                                 (onContentChanged)="maxLength($event, 400)"
