--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
@@ -11,7 +11,7 @@
                             <label class="label-left">Técnicas</label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
-                              <quill-editor   class="quill-editor-style card-80em position-relative"
+                              <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
                                               style="width: 100%;"
@@ -30,14 +30,14 @@
                         </div>
                       </div>
                   </div>
-                  <div class="row">
+                  <div class="row mt-1em">
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
                             <label class="label-left">Legales</label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
-                              <quill-editor   class="quill-editor-style card-80em position-relative"
+                              <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
                                               style="width: 100%;"
@@ -56,14 +56,14 @@
                         </div>
                       </div>
                   </div>
-                  <div class="row">
+                  <div class="row mt-1em mb-1em">
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
                             <label class="label-left">Administrativas - Financieras</label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
-                              <quill-editor   class="quill-editor-style card-80em position-relative"
+                              <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
                                               style="width: 100%;"
@@ -109,7 +109,7 @@
                             <label class="label-left">Técnicas</label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
-                              <quill-editor   class="quill-editor-style card-80em position-relative"
+                              <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
                                               style="width: 100%;"
@@ -128,14 +128,14 @@
                         </div>
                       </div>
                   </div>
-                  <div class="row">
+                  <div class="row mt-1em">
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
                             <label class="label-left">Legales</label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
-                              <quill-editor   class="quill-editor-style card-80em position-relative"
+                              <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
                                               style="width: 100%;"
@@ -154,14 +154,14 @@
                         </div>
                       </div>
                   </div>
-                  <div class="row">
+                  <div class="row mt-1em mb-1em">
                       <div class="col-md-12">
                         <div>
                           <div class="pr-1">
                             <label class="label-left">Administrativas - Financieras</label>
                           </div>
                           <div class="col d-flex" style="width: 100%;">
-                              <quill-editor   class="quill-editor-style card-80em position-relative"
+                              <quill-editor   class="quill-editor-style card position-relative"
                                               [styles]="editorStyle"
                                               [modules]="config"
                                               style="width: 100%;"
