--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
@@ -5,7 +5,7 @@
         <div align="left">
             <mat-card>
                 <mat-card-content>
-                    <div class="row">
+                    <div class="row" style="margin-left: .7em;">
                         <div class="col-md-12">
                           <div class="row">
                             <div class="pr-1">
