--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
@@ -97,7 +97,7 @@
                                   <label class="label-left">Tema tratado con la comunidad</label>
                                 </div>
                                 <div class="col d-flex" style="width: 100%;">
-                                    <quill-editor   class="quill-editor-style card-80em position-relative"
+                                    <quill-editor   class="quill-editor-style card position-relative"
                                                     [styles]="editorStyle"
                                                     [modules]="configTema"
                                                     style="width: 100%;"
