--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
@@ -148,7 +148,7 @@
               <label class="label-left">Observaciones</label>
             </div>
             <div class="col d-flex" style="width: 100%;">
-                <quill-editor   class="quill-editor-style card-80em position-relative"
+                <quill-editor   class="quill-editor-style card position-relative"
                                 [styles]="editorStyle"
                                 [modules]="config"
                                 style="width: 100%;"
