--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registrar-resultados-ensayo/registrar-resultados-ensayo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registrar-resultados-ensayo/registrar-resultados-ensayo.component.html
@@ -93,7 +93,7 @@
                                               <label class="label-left">Observaciones frente a los resultados</label>
                                             </div>
                                             <div class="col d-flex">
-                                                <quill-editor   class="quill-editor-style card-80em position-relative"
+                                                <quill-editor   class="quill-editor-style card position-relative"
                                                                 [styles]="editorStyle"
                                                                 [modules]="config"
                                                                 style="width: 100%;"
