--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
@@ -55,7 +55,7 @@
                               <label class="label-left">Descripción</label>
                             </div>
                             <div class="col d-flex">
-                                <quill-editor   class="quill-editor-style card-80em position-relative"
+                                <quill-editor   class="quill-editor-style card position-relative"
                                                 [styles]="editorStyle"
                                                 [modules]="config"
                                                 style="width: 100%;"
