--- a/asivamosffie.web/asivamosffie/src/assets/scss/_select.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_select.scss
@@ -142,3 +142,7 @@
 .mat-select-panel .mat-optgroup-label, .mat-select-panel .mat-option {
     height: 2.5em !important;
 }
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    background-color: rgb(255, 255, 255);
+}
