--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/alertas-relevantes/alertas-relevantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/alertas-relevantes/alertas-relevantes.component.html
@@ -30,7 +30,7 @@
                               <label class="label-left">Alertas relevantes identificadas</label>
                             </div>
                             <div class="col d-flex">
-                                <quill-editor   class="quill-editor-style card-80em position-relative"
+                                <quill-editor   class="quill-editor-style card position-relative"
                                                 [styles]="editorStyle"
                                                 [modules]="config"
                                                 style="width: 100%;"
