--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/comite-obra/comite-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/comite-obra/comite-obra.component.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
 
-                    <div class="row mt-1em">
+                    <div class="row mt-1em" style="margin-left: .7em;">
                         <div class="col-md-12">
                           <div class="row">
                             <div class="pr-1">
