--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
@@ -193,7 +193,7 @@
                                           <label class="label-left">Observaciones</label>
                                         </div>
                                         <div class="col d-flex">
-                                            <quill-editor   class="quill-editor-style card-80em position-relative"
+                                            <quill-editor   class="quill-editor-style card position-relative"
                                                             [styles]="editorStyle"
                                                             [modules]="config"
                                                             style="width: 100%;"
