--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-sst/gestion-sst.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-sst/gestion-sst.component.html
@@ -73,7 +73,7 @@
                                   <label class="label-left">Tema de capacitación</label>
                                 </div>
                                 <div class="col d-flex" style="width: 100%;">
-                                    <quill-editor   class="quill-editor-style card-80em position-relative"
+                                    <quill-editor   class="quill-editor-style card position-relative"
                                                     [styles]="editorStyle"
                                                     [modules]="config"
                                                     style="width: 100%;"
