--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-decisiones-acta/tabla-decisiones-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-decisiones-acta/tabla-decisiones-acta.component.html
@@ -39,7 +39,7 @@
     <ng-container matColumnDef="estadoProyecto">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del proyecto </th>
       <td mat-cell *matCellDef="let element" align="center">
-        {{ element.contratacion.estadoProyecto }}
+        {{ element.tipoSolicitudCodigo === listaTipoSolicitudCodigo.obra ? element.contratacion.estadoProyectoObra : element.contratacion.estadoProyectoInterventoria }}
       </td>
     </ng-container>
     
